@@ -53,6 +53,10 @@ ALPHA v0.0.0.8
     - Created a console page for remote server interaction (still needs to be scripted)
 
 ALPHA v0.0.0.9
-    - Added audio folder
+    - Added audio folder (haven't set up server.py to acknowledge it for audio files yet)
     - send_file() now uses <class Response>'s attach_file()
-    
+    - Added several /actions to main.py (pay, signup, shutdown)
+    - Fixed severe bugs in server exit process
+    - Created a to-do list
+    - Confirmed pickling of users works as intended
+
